[tool.poetry]
name = "wntr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.2"
networkx = "^2.6.3"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
# optional
plotly = "^5.4.0"
folium = "^0.12.1"
utm = "^0.7.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
ipykernel = "^6.5.0"
nbformat = "^5.1.3"
nbconvert = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
